@startuml
title KSR_Ling_Class_diagram_fuzzy

class FoodItem{
    - String name
    - int calories
    - float fat
    - float protein
    - float carbohydrates
    - float saturatedFats
    - float calcium
    - float iron
    - float water
    - float phosphorus
    - float sodium

    double getProperty(Field)
}

class FuzzySet{
    - List<FoodItem> foodItems
    - List<Double> values
    - MembershipFuction membershipFuction

    public FuzzySet(List<FoodItem>, MembershipFunction, Field)

    double DoM()
    double cardinality()
    List<FoodItem> support()
    int height()
    List<FoodItem> alphaCut(float)
    int alphaCutHeight(float)
    List<FoodItem> complement()
    boolean isNormal()
    boolean isEmpty()
    boolean isConvex()
    boolean isConcave()
    FuzzySet setUnion(FuzzySet)
    FuzzySet setIntersect(FuzzySet)
}

class GaussFuction{
    - double a
    - double b
    - double c
    - double upperBound

    double getValue(double)
    double getBegin()
    double getEnd()
    double getIntegral()
    double getUpperBound()
}

interface MembershipFunction{
    double getValue(double)
    double getBegin()
    double getEnd()
    double getIntegral()
    double getUpperBound()
}

class TrapezoidFuction{
    - double a
    - double b
    - double c
    - double d
    - double upperBound

    double getValue(double)
    double getBegin()
    double getEnd()
    double getIntegral()
    double getUpperBound()
}

class TriangleFuction{
    - double a
    - double b
    - double c
    - double upperBound

    double getValue(double)
    double getBegin()
    double getEnd()
    double getIntegral()
    double getUpperBound()
}

FuzzySet ..> FoodItem
FuzzySet ..> MembershipFunction
TrapezoidFuction ..|> MembershipFunction
GaussFuction ..|> MembershipFunction
TriangleFuction ..|> MembershipFunction
